# docs

./: .gitignore  404.html  copy.py  index.html  main.py  mkdocs.yml  pyproject.toml
.obsidian/: workspace.json
docs/: index.md  portugues.md
docs/matematica/: adicao_subtracao.md  fracao_equacao.md  potenciacao.md  radiciacao.md
docs/portugues/: acentuacao.md  div_silabica.md  fonologia.md  morfologia.md
matematica/: index.html
matematica/adicao_subtracao/: index.html
matematica/fracao_equacao/: index.html
matematica/radiciacao/: index.html
portugues/: index.html
portugues/acentuacao/: index.html
portugues/div_silabica/: index.html
portugues/fonologia/: index.html
search/: search_index.json
site/: 404.html  index.html
site/matematica/adicao_subtracao/: index.html
site/matematica/fracao_equacao/: index.html
site/matematica/potenciacao/: index.html
site/matematica/radiciacao/: index.html
site/portugues/acentuacao/: index.html
site/portugues/fonologia/: index.html
site/portugues/morfologia/: index.html
site/search/: search_index.json
